# src/domain/model/wire/snap-metadata.dto.ts
@@ -1,6 +1,0 @@
-import { SnapMetaData } from '../snap-metadata';
-
-export type SnapMetaDataDto = Omit<SnapMetaData, 'publishedAt' | 'closedAt'> & {
-  publishedAt: string;
-  closedAt: string | null;
-};
